--- a/project/frontend/src/scss/_variables.scss
+++ b/project/frontend/src/scss/_variables.scss
@@ -9,11 +9,5 @@ $bg-color-secondary: #fdfaf4;
 $bg-color-tertiary:  #e1ddd5;
 $bg-color-quaternary:#d0c5b1;
 
-// floatの後ろが回り込むのを修正
-@mixin clear-float {
-    &::after {
-        content: "";
-        display: block;
-        clear: both;
-    }
-}
+// width
+$global-max-width: 960px;
